// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applications render correctly 1`] = `
<div
  class="settings"
>
  <modal-wrapper-stub
    height="auto"
    name="application"
  >
    <form>
      <modal-header-stub>
        <h1>
          
        </h1>
      </modal-header-stub>
       
      <modal-item-stub
        class="is-vertical"
      >
        <modal-label-stub
          class="is-vertical"
        >
          
          labels.scopes
        
        </modal-label-stub>
         
        <highlight-stub>
          <ul />
        </highlight-stub>
      </modal-item-stub>
    </form>
  </modal-wrapper-stub>
   
  <section
    class="content"
  >
    <header
      class="header"
    >
      <heading-stub
        class="is-small"
      >
        <icon-stub
          name="box-icon"
        />
        
        title
      
      </heading-stub>
    </header>
     
    <div
      class="list-item"
    >
      <h1>
        Example1
      </h1>
       
      <btn-stub
        aria-label="ariaLabels.delete"
        class="delete-button has-icon"
      >
        <icon-stub
          class="is-danger"
          name="x-icon"
        />
      </btn-stub>
    </div>
    <div
      class="list-item"
    >
      <h1>
        Example2
      </h1>
       
      <btn-stub
        aria-label="ariaLabels.delete"
        class="delete-button has-icon"
      >
        <icon-stub
          class="is-danger"
          name="x-icon"
        />
      </btn-stub>
    </div>
     
    <!---->
  </section>
</div>
`;

exports[`Applications when click list item render modal correctly 1`] = `
<div
  class="settings"
>
  <modal-wrapper-stub
    height="auto"
    name="application"
  >
    <form>
      <modal-header-stub>
        <h1>
          Example2
        </h1>
      </modal-header-stub>
       
      <modal-item-stub
        class="is-vertical"
      >
        <modal-label-stub
          class="is-vertical"
        >
          
          labels.scopes
        
        </modal-label-stub>
         
        <highlight-stub>
          <ul>
            <li>
              
              scopes.activities:read
            
            </li>
            <li>
              
              scopes.activities:write
            
            </li>
          </ul>
        </highlight-stub>
      </modal-item-stub>
    </form>
  </modal-wrapper-stub>
   
  <section
    class="content"
  >
    <header
      class="header"
    >
      <heading-stub
        class="is-small"
      >
        <icon-stub
          name="box-icon"
        />
        
        title
      
      </heading-stub>
    </header>
     
    <div
      class="list-item"
    >
      <h1>
        Example1
      </h1>
       
      <btn-stub
        aria-label="ariaLabels.delete"
        class="delete-button has-icon"
      >
        <icon-stub
          class="is-danger"
          name="x-icon"
        />
      </btn-stub>
    </div>
    <div
      class="list-item"
    >
      <h1>
        Example2
      </h1>
       
      <btn-stub
        aria-label="ariaLabels.delete"
        class="delete-button has-icon"
      >
        <icon-stub
          class="is-danger"
          name="x-icon"
        />
      </btn-stub>
    </div>
     
    <!---->
  </section>
</div>
`;
